# nucleus

./: .gitignore  CLAUDE.md  FOLLOWUPS.md  LOCAL_DEV.md  README.md  docker-compose.yml  mkdocs.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_campaigns.py  0003_campaign_deliverables.py
backend/nucleus/: app.py  config.py  events.py  models.py  store.py
backend/nucleus/clients/: __init__.py  comfyui.py  neuropeer.py  neuropeer_types.py  siliconflow.py
backend/nucleus/db/: __init__.py  engine.py  migrate.py  models.py
backend/nucleus/orchestrator/: editor.py  evaluator.py  finalize.py  loop.py  planner.py  ruflo_client.py  suggestions.py
backend/nucleus/providers/: __init__.py  _comfyui_runtime.py  _image_protocol.py  _protocol.py  _types.py  base.py  comfyui_audio.py  comfyui_client.py  comfyui_event_bridge.py  comfyui_video.py  comfyui_workflows.py  elevenlabs_provider.py  kling.py  lyria.py  magihuman.py  mock.py  registry.py  seedance.py  siliconflow_image.py  types.py
backend/nucleus/routes/: briefs.py  campaigns.py  candidates.py  tools.py  ws.py
backend/nucleus/storage/: __init__.py  s3.py
backend/nucleus/tools/: __init__.py  _ffmpeg_commands.py  clip_ffmpeg.py  compose_remotion.py  edit_variant.py  generate_audio.py  generate_gtm_strategy.py  generate_image.py  generate_music.py  generate_sop.py  generate_storyboard.py  generate_video.py  mock_fixtures.py  run_comfyui_workflow.py  schemas.py  score_neuropeer.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py  test_audio_providers.py  test_build_workflow_endpoint.py  test_campaigns_api.py  test_ceiling_fallback.py  test_chat_endpoint.py  test_comfyui_client.py  test_comfyui_event_bridge.py  test_comfyui_providers.py  test_comfyui_workflows.py  test_comfyui_workflows_shape.py  test_compose_remotion.py  test_db.py  test_e2e_loop.py  test_ffmpeg.py  test_ffmpeg_commands.py  test_finalize_wiring.py  test_generate_image_tool.py  test_gtm_sop_tools.py  test_magihuman.py  test_neuropeer_integration.py  test_orchestrator_ruflo.py  test_providers.py  test_seedance.py  test_siliconflow_client.py  test_storage.py  test_storyboard_tool.py  test_suggestion_flow.py  test_worker.py
(+301 files in other folders)
