[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleus"
version = "0.1.0"
description = "Nucleus recursive neuromarketing video engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "fal-client>=0.5.0",
    "httpx>=0.27.0",
    "elevenlabs>=1.0,<2",
    "google-cloud-aiplatform>=1.60,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nucleus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
