[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleus"
version = "0.1.0"
description = "Nucleus recursive neuromarketing video engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "fal-client>=0.5.0",
    "httpx>=0.27.0",
    "elevenlabs>=1.0,<2",
    "google-cloud-aiplatform>=1.60,<2",
    "aioboto3>=13.0",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27.0",
    "moto[s3,server]>=5.0",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nucleus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
